feat: remove overflow hidden on #app and testing alert danger icon

--- a/src/pages/spacings.html
+++ b/src/pages/spacings.html
@@ -130,7 +130,7 @@
           Parent padding 4
           <div class="u-container u-container--danger u--mx-4">Child compensé (.u--mx-4)</div>
         </div>
-        <ltds-alert scheme="info" title="Attention" content="Les marges négatives compliquent parfois la lisibilité du layout et l’accessibilité : utilisez-les avec parcimonie." />
+        <ltds-alert scheme="danger" title="Attention" content="Les marges négatives compliquent parfois la lisibilité du layout et l’accessibilité : utilisez-les avec parcimonie." />
       </div>
 
     </doc-section>
