--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -3,10 +3,10 @@
          <div class="lt-frame lt-frame--gap-8 lt-frame--tab-items-center u-m-auto">
             <!-- class="u-text-gradient-primary" -->
              <!-- id="page-title" -->
-             <h1 class="u-fs-7 u-mob-fs-6 u-smob-fs-5 u-text-tab-center">LTDS Design System</h1>
+             <h1 class="u-fs-7 u-mob-fs-6 u-smob-fs-5 u-text-tab-center reveal">LTDS Design System</h1>
              <div class="lt-frame lt-frame--mob-items-center">
-                 <h2 id="page-subtitle" class="u-mob-fs-3 u-text-tab-center">Un design system orienté code, modulaire et extensible.</h2>
-                 <p id="jumbo-description" class="u-lh-3 u-text-tab-center u-text-secondary"> 
+                 <h2 id="page-subtitle" class="u-mob-fs-3 u-text-tab-center reveal --delay-1">Un design system orienté code, modulaire et extensible.</h2>
+                 <p id="jumbo-description" class="u-lh-3 u-text-tab-center u-text-secondary reveal --delay-2"> 
                     Avec 6 ans d’expérience en développement front-end, je conçois des interfaces web robustes et centrées sur l’utilisateur. Mon approche met l’accent sur un code propre, maintenable et une intégration UI fluide.
                 </p>
              </div>
