--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -2,8 +2,7 @@
      <div class="u-p-11 u-tab-p-6 u-m-auto lt-stack u-h-full u-basis-2-3">
          <div class="lt-frame lt-frame--gap-8 lt-frame--tab-items-center u-m-auto">
             <!-- class="u-text-gradient-primary" -->
-             <!-- id="page-title" -->
-             <h1 class="u-fs-7 u-mob-fs-6 u-smob-fs-5 u-text-tab-center reveal">LTDS Design System</h1>
+             <h1 id="page-title" class="u-fs-7 u-mob-fs-6 u-text-tab-center reveal">LTDS Design System</h1>
              <div class="lt-frame lt-frame--mob-items-center">
                  <h2 id="page-subtitle" class="u-mob-fs-3 u-text-tab-center reveal --delay-1">Un design system orienté code, modulaire et extensible.</h2>
                  <p id="jumbo-description" class="u-lh-3 u-text-tab-center u-text-secondary reveal --delay-2"> 
