fix: broken lineheights and improve frame get started ui

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -5,7 +5,7 @@
              <h1 id="page-title" class="u-fs-7 u-mob-fs-6 u-text-tab-center reveal">LTDS Design System</h1>
              <div class="lt-frame lt-frame--mob-items-center">
                  <h2 id="page-subtitle" class="u-mob-fs-3 u-text-tab-center reveal --delay-1">Un design system orienté code, modulaire et extensible.</h2>
-                 <p id="jumbo-description" class="u-lh-3 u-text-tab-center u-text-secondary reveal --delay-2"> 
+                 <p id="jumbo-description" class="u-lh-4 u-text-tab-center u-text-secondary reveal --delay-2"> 
                     Avec 6 ans d’expérience en développement front-end, je conçois des interfaces web robustes et centrées sur l’utilisateur. Mon approche met l’accent sur un code propre, maintenable et une intégration UI fluide.
                 </p>
              </div>
@@ -39,7 +39,7 @@
 </section>
 
 <section class="section lt-page">
-  <div class="lt-frame lt-frame--wide">
+  <div class="lt-frame lt-frame--wide lt-frame--fantasy">
 
     <doc-section title="Get Started">
       <p>
