--- a/src/pages/utilities.html
+++ b/src/pages/utilities.html
@@ -170,7 +170,13 @@
 
       .u-lh-1 { line-height: var(--lh-1); }
       .u-lh-2 { line-height: var(--lh-2); }
-      .u-lh-prc-3 { line-height: 150%; }
+      .u-lh-3 { line-height: var(--lh-3); }
+      .u-lh-4 { line-height: var(--lh-4); }
+      .u-lh-5 { line-height: var(--lh-prc-0); }
+      .u-lh-6 { line-height: var(--lh-prc-1); }
+      .u-lh-7 { line-height: var(--lh-prc-2); }
+      .u-lh-8 { line-height: var(--lh-prc-3); }
+      .u-lh-9 { line-height: var(--lh-prc-4); }
       </ltds-code-block>
     </doc-section>
 
