--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -1,3 +1,5 @@
 <footer class="ltds-footer u-min-h-l-4 lt-frame lt-frame--items-center lt-frame--center">
-    <p>LTDS Design System © 2025</p>
+    <div>Version: <span class="u-text-info" data-version="ltds"></span> - LTDS Design System © 2025</div>
+    <div >Portfolio Version: <span class="u-text-info" data-version="portfolio"></span></div>
+    <!-- <p>LTDS Design System </p> -->
 </footer>
