fix: color-border-primary-40 + button gradient hover

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -11,7 +11,7 @@
              </div>
              <div class="lt-stack">
                 <!-- data-modal-ref="modal-test" -->
-                <button id="copy-npm" class="ltds-btn ltds-btn--lg ltds-btn--gradient ltds-btn--rounded ltds-btn--responsive u-min-w-120">
+                <button id="copy-npm" class="ltds-btn ltds-btn--lg ltds-btn--gradient ltds-btn--rounded u-min-w-120">
                     <span>npm i @tarik-leviathan/ltds</span>
                     <!-- <i class="icon lt-icon-download-test icon-size-lg"></i> -->
                     <i class="icon lt-icon-copy icon-size-lg"></i>
