feat: rework font size system tokens utilities and update doc

--- a/src/pages/reset.html
+++ b/src/pages/reset.html
@@ -41,7 +41,7 @@
       html, body {
         font-family: var(--font-family-base);
         font-weight: var(--font-weight-regular);
-        font-size: var(--font-size-2);
+        font-size: var(--tfs-2);
         color: var(--color-text-primary);
       }
       </ltds-code-block>
