--- a/src/pages/utilities.html
+++ b/src/pages/utilities.html
@@ -111,9 +111,9 @@
       .u-fw-bold { font-weight: 700; }
 
       /* Tailles (extraits) */
-      .u-fs-1 { font-size: var(--font-size-1); }
-      .u-fs-2 { font-size: var(--font-size-2); }
-      .u-fs-3 { font-size: var(--font-size-3); }
+      .u-fs-1 { font-size: var(--tfs-1); }
+      .u-fs-2 { font-size: var(--tfs-2); }
+      .u-fs-3 { font-size: var(--tfs-3); }
 
       /* Alignements */
       .u-text-left { text-align: left; }
