--- a/src/parts/navbar.html
+++ b/src/parts/navbar.html
@@ -46,6 +46,7 @@
 
             <div class="panel-menu">
                 <div class="lt-frame u-p-4">
+                    <h3 class="u-text-primary">Bases</h3>
                     <ul class="lt-stack lt-stack--gap-2" id="mobile-menu"></ul>
                     <ltds-divider></ltds-divider>
                     <div class="lt-frame lt-frame--gap-2">
