--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -41,7 +41,7 @@
 <section class="section lt-page">
   <div class="lt-frame lt-frame--wide lt-frame--fantasy">
 
-    <doc-section title="Get Started">
+    <doc-section title="Get started !">
       <p>
         Installez le Design System via npm et commencez à l’utiliser immédiatement.  
         Vous pouvez importer la feuille de style complète ou seulement les parties qui vous intéressent grâce au <em>tree-shaking</em>.
