--- a/src/parts/navbar.html
+++ b/src/parts/navbar.html
@@ -18,11 +18,13 @@
 
             <li>
                 <div class="ltds-menu-label">Themes<i class="icon lt-icon-caret-down icon-size-lg"></i></div>
-                <ul class="ltds-menu-submenu u-grid u-grid-12">
-                    <h3 class="u-col-span-12 ltds-menu-item">Select a theme</h3>
-                    <li class="u-col-span-12 theme-switch ltds-menu-item" data-scheme="0">Theme 0</li>
-                    <li class="u-col-span-12 theme-switch ltds-menu-item" data-scheme="1">Purple</li>
-                    <li class="u-col-span-12 theme-switch ltds-menu-item" data-scheme="2">Azure deep</li>
+                <ul class="ltds-menu-submenu">
+                    <h3 class="ltds-menu-item">Select a theme</h3>
+                    <div class="lt-stack lt-stack--gap-2">
+                        <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--rounded ltds-btn--outline" data-scheme="0">Theme 0</div>
+                        <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--rounded ltds-btn--outline" data-scheme="1">Purple</div>
+                        <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--rounded ltds-btn--outline" data-scheme="2">Azure deep</div>
+                    </div>
                 </ul>
             </li>
     
@@ -51,9 +53,11 @@
                     <ltds-divider></ltds-divider>
                     <div class="lt-frame lt-frame--gap-2">
                         <h3 class="ltds-menu-item">Select a theme</h3>
-                        <li class="theme-switch ltds-menu-item" data-scheme="0">Theme 0</li>
-                        <li class="theme-switch ltds-menu-item" data-scheme="1">Purple</li>
-                        <li class="theme-switch ltds-menu-item" data-scheme="2">Azure deep</li>
+                        <div class="lt-stack lt-stack--gap-2">
+                            <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--outline" data-scheme="0">Theme 0</div>
+                            <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--outline" data-scheme="1">Purple</div>
+                            <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--outline" data-scheme="2">Azure deep</div>
+                        </div>
                     </div>
                 </div>
             </div>
