--- a/src/parts/navbar.html
+++ b/src/parts/navbar.html
@@ -22,7 +22,7 @@
                     <h3 class="ltds-menu-item">Select a theme</h3>
                     <div class="lt-stack lt-stack--gap-2">
                         <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--rounded ltds-btn--outline" data-scheme="0">Theme 0</div>
-                        <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--rounded ltds-btn--outline" data-scheme="1">Purple</div>
+                        <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--rounded ltds-btn--outline" data-scheme="1">Iris Mist</div>
                         <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--rounded ltds-btn--outline" data-scheme="2">Azure deep</div>
                     </div>
                 </ul>
@@ -55,7 +55,7 @@
                         <h3 class="ltds-menu-item">Select a theme</h3>
                         <div class="lt-stack lt-stack--gap-2">
                             <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--outline" data-scheme="0">Theme 0</div>
-                            <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--outline" data-scheme="1">Purple</div>
+                            <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--outline" data-scheme="1">Iris Mist</div>
                             <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--outline" data-scheme="2">Azure deep</div>
                         </div>
                     </div>
