feat: improve and customize cards and gradients

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -40,7 +40,8 @@
 
 <section class="section lt-page">
 
-  <div data-scheme="3" class="lt-frame lt-frame--fantasy reveal --scale" style="position: relative;">
+  <!-- data-scheme="3" -->
+  <div class="lt-frame lt-frame--fantasy reveal --scale" style="position: relative;">
     <!-- <div class="lt-frame-inset-gradient"></div> -->
     <div class="lt-frame-content">
       <doc-section title="Get started !" extra-class="--start">
