--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <script src="https://cdn.jsdelivr.net/npm/prismjs/components/prism-css.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs/components/prism-js.min.js"></script>
   </head>
-  <body>
+  <body data-scheme="3">
     <div id="menu-nav"></div>
     <div id="app">
       <main id="main"></main>
